<resources>
    <string name="app_name">Traveller</string>
    <string name="main_title">Destinations</string>
    <string name="btn_new_dest">New</string>
    <string name="title_add_dest">New destination</string>
    <string name="title_update_dest">Update destination</string>
    <string name="lbl_dest_name">Name</string>
    <string name="lbl_country">Country</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_image">Upload image</string>
    <string name="img_preview">Image preview</string>
    <string name="btn_save_dest">Save</string>
    <string name="price_format">$%.2f</string>
    <string name="error_required_fields">Name and price are required</string>
    <string name="error_invalid_price">Enter a valid price</string>
    <string name="error_invalid_description">The description must be at least 20 characters long</string>
    <string name="error_image_required">Please choose an image</string>
    <string name="error_loading">Couldn\'t load destination</string>
    <string name="error_saving">Couldn\'t save destination</string>
    <string name="success_saving">Destination saved!</string>
    <string name="confirm_delete_title">Delete destination?</string>
    <string name="confirm_delete_message">Are you sure you want to delete \"%1$s\"? This can\'t be undone.</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="error_deleting">Couldn\'t delete destination</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_create_account">Create Account</string>
    <string name="action_logout">Log out</string>
    <string name="btn_to_register">New here? Create an account</string>
    <string name="btn_to_signin">Already have an account? Sign in</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="error_required_login_fields">Email and password are required</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="error_auth_failed">Authentication failed</string>
    <string-array name="country_list">
        <item>Mexico</item>
        <item>USA</item>
        <item>Canada</item>
        <item>Brazil</item>
        <item>Argentina</item>
        <item>Peru</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Venezuela</item>
        <item>Bolivia</item>
        <item>Uruguay</item>
        <item>Paraguay</item>
        <item>Ecuador</item>
        <item>Panama</item>
        <item>Spain</item>
        <item>Italy</item>
        <item>France</item>
        <item>Germany</item>
        <item>United Kingdom</item>
        <item>Netherlands</item>
        <item>Switzerland</item>
        <item>Australia</item>
        <item>New Zealand</item>
        <item>Japan</item>
        <item>China</item>
        <item>India</item>
    </string-array>
</resources>