<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".EditDestinationActivity">

    <TextView
        android:id="@+id/textDestinationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_default"
        android:background="@color/primary"
        android:text="@string/title_add_dest"
        android:textAlignment="center"
        android:textColor="@color/on_primary"
        android:textSize="@dimen/text_h1"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_big"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/spacing_big"
        app:layout_constraintTop_toBottomOf="@+id/textDestinationTitle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/tbName"
            android:text="@string/lbl_dest_name"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_normal" />

        <EditText
            android:id="@+id/tbName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/spacing_default"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_default"
            android:labelFor="@+id/spinnerCountry"
            android:text="@string/lbl_country"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_normal" />

        <Spinner
            android:id="@+id/spinnerCountry"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/spacing_default" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_default"
            android:labelFor="@+id/tbPrice"
            android:text="@string/lbl_price"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_normal" />

        <EditText
            android:id="@+id/tbPrice"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/spacing_default"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_default"
            android:labelFor="@+id/tbDescription"
            android:text="@string/lbl_description"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_normal" />

        <EditText
            android:id="@+id/tbDescription"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/spacing_default"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/text_primary" />

        <ImageView
            android:id="@+id/ivPreview"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_default"
            android:contentDescription="@string/img_preview"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_photo" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/input_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_default"
            android:backgroundTint="@color/primary"
            android:text="@string/lbl_image"
            android:textColor="@color/on_primary"
            android:textSize="@dimen/text_normal" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="@dimen/spacing_big"
        android:backgroundTint="@color/accent"
        android:text="@string/btn_save_dest"
        android:textColor="@color/on_primary"
        android:textSize="@dimen/text_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>