<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="@dimen/text_h2"
        app:fontFamily="@font/gveretlevin_regular"
        android:textColor="@color/primary_variant"
        android:background="@color/primary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:padding="@dimen/spacing_default"
        android:textAlignment="center"
        android:textSize="@dimen/text_h1"
        android:textColor="@color/on_primary"
        android:background="@color/primary"
        app:layout_constraintTop_toBottomOf="@+id/tvApp" />

    <ImageButton
        android:id="@+id/btnLogout"
        android:layout_width="@dimen/input_height"
        android:layout_height="@dimen/input_height"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/action_logout"
        android:src="@drawable/ic_logout"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitle"
        app:tint="@color/primary_variant" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_default"
        android:text="@string/btn_new_dest"
        android:textSize="@dimen/text_normal"
        android:textColor="@color/on_secondary"
        android:backgroundTint="@color/accent"
        app:icon="@drawable/ic_add"
        app:iconTint="@color/on_secondary"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/destinationList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_default"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd"
        tools:listitem="@layout/item_destination" />

</androidx.constraintlayout.widget.ConstraintLayout>